<resources>

    <!--Untranslatable keys-->
    <string name="firebase_url" translatable="false">CHANGE ME</string>

    <string name="vector_bookmark_pathdata" translatable="false">M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z</string>
    <string name="vector_book_pathdata" translatable="false">M6,4H11V12L8.5,10.5L6,12M18,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V4A2,2 0 0,0 18,2</string>
    <string name="vector_tag_pathdata" translatable="false">M5.5,9A1.5,1.5 0 0,0 7,7.5A1.5,1.5 0 0,0 5.5,6A1.5,1.5 0 0,0 4,7.5A1.5,1.5 0 0,0 5.5,9M17.41,11.58C17.77,11.94 18,12.44 18,13C18,13.55 17.78,14.05 17.41,14.41L12.41,19.41C12.05,19.77 11.55,20 11,20C10.45,20 9.95,19.78 9.58,19.41L2.59,12.42C2.22,12.05 2,11.55 2,11V6C2,4.89 2.89,4 4,4H9C9.55,4 10.05,4.22 10.41,4.58L17.41,11.58M13.54,5.71L14.54,4.71L21.41,11.58C21.78,11.94 22,12.45 22,13C22,13.55 21.78,14.05 21.42,14.41L16.04,19.79L15.04,18.79L20.75,13L13.54,5.71Z</string>
    <string name="vector_synch_pathdata" translatable="false">M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z</string>
    <string name="vector_earth_pathdata" translatable="false">M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z</string>
    <string name="trans_cardview" translatable="false">trans_cardview</string>

    <!--Generic strings-->
    <string name="app_name">Easy Bookmarks</string>
    <string name="generic_error">Error</string>
    <string name="generic_about">About</string>

    <!--LoginActivity-->
    <string name="login_activity">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_network_error">"Network error: "</string>
    <string name="login_auth_error">"Error authenticating with Google: "</string>

    <!--EditBookmarkActivity-->
    <string name="edit_bookmark_title">Edit bookmark</string>
    <string name="edit_bookmark_custom_title">Add a custom name</string>
    <string name="edit_bookmark_tags">Add tags</string>

    <!--AddBookmarkActivity-->
    <string name="add_bookmark_title">Add bookmark</string>
    <string name="add_bookmark_url_hint">Add an URL</string>
    <string name="add_bookmark_title_hint">Add a custom title</string>
    <string name="add_bookmark_tags">Add tags</string>

    <!--AppIntroActivity-->
    <string name="intro_activity">App intro</string>
    <string name="intro_welcome">Welcome to \nEasy Bookmarks</string>
    <string name="intro_save">SAVE</string>
    <string name="intro_organize">ORGANIZE</string>
    <string name="intro_sync">SYNC</string>
    <string name="intro_public">GET INSPIRED</string>
    <string name="intro_save_hint">Save all the awesome links you find while surfing the web.</string>
    <string name="intro_organize_hint">Keep the bookmarks always at your fingertips: tags are the most flexible way to organize them .</string>
    <string name="intro_sync_hint">All your bookmarks are automatically synched with your Google account: You won\'t ever lose any important link.</string>
    <string name="intro_public_hint">Keep an eye on the most saved and tagged bookmarks on the web and... get inspired.</string>

    <!--Snackbar messages-->
    <string name="sb_no_connection_action">You must be connected to perform this action</string>
    <string name="sb_no_connection_tags">You must be connected to see public tag</string>
    <string name="sb_no_tags">No tags vailable. Add some tags first! :)</string>
    <string name="sb_enter_valid_url">You must enter a valid URL</string>
    <string name="sb_url_already_exists">You already have this bookmark</string>
    <string name="sb_must_be_connected">You must be connected to see public tags</string>
    <string name="sb_list_last">Switched list order to last saved bookmarks.</string>
    <string name="sb_list_most">Switched list order to most saved bookmarks.</string>
    <string name="sb_connection_error">There was a connection error: try again later.</string>

    <!--Delete confirmation-->
    <string name="delete_confirm_title">Delete bookmark</string>
    <string name="delete_confirm_message">Are you sure you want to delete this bookmark?</string>

    <!--Firebase login progress dialog-->
    <string name="fb_login_progess_dialog_title">Loading</string>
    <string name="fb_login_progess_dialog_text">Authenticating with Firebase...</string>
    <string name="fb_login_error">Error</string>

    <!--Tab titles-->
    <string name="tab_title_private_bookmarks">My Bookmarks</string>
    <string name="tab_title_public_bookmarks">Public Bookmarks</string>

    <!--Actions-->
    <string name="action_tags">Tags</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>

    <!--CardView actions-->
    <string name="cardview_delete">DELETE</string>
    <string name="cardview_edit">EDIT</string>
    <string name="cardview_done">DONE</string>
    <string name="cardview_cancel">CANCEL</string>
    <string name="cardview_share">SHARE</string>
    <string name="cardview_save">SAVE</string>

    <!--Card bookmark private/public-->
    <string name="cardview_bookmark_saved_date">Bookmarked %1$s</string>
    <string name="cardview_full_url">Full URL:</string>
    <string name="cardview_bookmark_num_saved_single">Bookmarked for the first time %1$s</string>
    <string name="cardview_bookmark_num_saved_multi">Bookmarked %1$s times, last time was %2$s</string>

    <!--Share intent-->
    <string name="share_subject">Share URL</string>

    <!--Add Tag strings-->
    <string name="add_tag_hint">Add a new tag</string>
    <string name="add_tag_choose_one">Or choose from one already used:</string>

    <!--Floating action button-->
    <string name="fab_add_new_bookmark">Add a new bookmark</string>
    <string name="fab_private_tags">Browse your tags</string>
    <string name="fab_public_tags">Browse public tags</string>
    <string name="fab_order_last">Order bookmarks chronologically</string>
    <string name="fab_order_most">Order bookmarks by most saved</string>

    <!--ContentDescriptions-->
    <string name="cd_favicon">Favicon</string>
    <string name="cd_add_bookmark">Add a bookmark</string>
    <string name="cd_add_tag">Add tags</string>
    <string name="cd_tag_icon">Tag icon</string>
    <string name="cd_url_icon">Url icon</string>
    <string name="cd_bookmark_title">Title icon</string>
    <string name="cd_paste">Paste icon</string>
    <string name="cd_delete">Delete icon</string>
    <string name="cd_edit">Edit icon</string>
    <string name="cd_share">Share icon</string>
    <string name="cd_save">Save icon</string>
    <string name="cd_info_img">Status info</string>
    <string name="cd_refresh">Refresh</string>
    <string name="cd_intro_img">Intro image</string>
    <string name="cd_parallax">Parallax img logo</string>

    <!--Widget-->
    <string name="widget_emptyview">You need to log-in and add some bookmarks through the app first.</string>

    <!--Settings-->
    <string name="setting_on_click_expand_key" translatable="false">ON_CLICK_EXPAND</string>
    <string name="setting_list_order" translatable="false">LIST_ORDER</string>

    <!--Information screens-->
    <string name="info_no_bookmarks">You still have no bookmark</string>
    <string name="info_no_connection">No connection</string>

    <!--Showcase screens-->
    <string name="showcase_intro">Hi!\nLet me quickly introduce you to\nEasy Bookmarks</string>
    <string name="showcase_saved_bookmarks">You start from here, where you can find your saved bookmarks.</string>
    <string name="showcase_actions">Click here to add a new bookmark and for other actions.</string>
    <string name="showcase_public">And lastly:\nclicking here brings you to a list of all the bookmarks stored in Easy Bookmarks.\nHave fun!</string>
    <string name="showcase_got_it">GOT IT</string>
    <string name="showcase_custom_title">Now you can now add a custom title to your new bookmark...</string>
    <string name="showcase_tags">...and up to three tags.</string>

</resources>
