<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/default_padding_small"
        android:paddingLeft="@dimen/default_padding_medium"
        android:paddingRight="@dimen/default_padding_medium"
        android:paddingTop="@dimen/default_padding_small">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_large"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:contentDescription="@string/cd_refresh"
            android:src="@drawable/ic_refresh_white_24dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_padding_large"
        android:gravity="center"
        android:text="@string/widget_emptyview"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        />

</LinearLayout>