<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card_view1"
    style="@style/MyCardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="3dp"
    card_view:cardUseCompatPadding="true"
    android:transitionName="@string/trans_cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Header section-->
        <LinearLayout
            style="@style/CardViewSection"
            android:layout_marginBottom="@dimen/default_padding_medium"
            android:layout_marginTop="@dimen/default_padding_medium"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_favicon"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/cd_favicon"
                android:src="@drawable/ic_bookmark_grey_500_24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_padding_large"
                android:layout_marginStart="@dimen/default_padding_large"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_grey_900"
                    android:textSize="@dimen/text_medium"/>

                <TextView
                    android:id="@+id/textview_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/text_small"/>

            </LinearLayout>

        </LinearLayout>

        <!--Detail section-->
        <LinearLayout
            android:id="@+id/linearlayout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/CardViewSection"
                android:orientation="vertical"
                android:visibility="visible">

                <org.apmem.tools.layouts.FlowLayout
                    android:id="@+id/flowlayout_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_padding_medium"
                    android:layout_marginLeft="-6dp"
                    android:layout_marginStart="-6dp"/>

                <TextView
                    android:id="@+id/textview_date_saved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_padding_medium"
                    android:textSize="@dimen/text_small"
                    android:textStyle="italic"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_full_url"
                    android:textColor="@color/md_grey_900"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textview_full_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_padding_medium"
                    android:textSize="@dimen/text_small"/>

            </LinearLayout>

            <LinearLayout style="@style/CardViewSeparator"/>

            <!--Footer section-->
            <LinearLayout
                style="@style/CardViewSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_padding_medium"
                android:layout_marginRight="@dimen/default_padding_medium"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_delete"
                    style="@style/CardViewActionImage"
                    android:src="@drawable/ic_delete_grey_600_24dp"
                    android:contentDescription="@string/cd_delete"/>

                <ImageView
                    android:id="@+id/imageview_edit"
                    style="@style/CardViewActionImage"
                    android:src="@drawable/ic_mode_edit_grey_600_24dp"
                    android:contentDescription="@string/cd_edit"/>

                <ImageView
                    android:id="@+id/imageview_share"
                    style="@style/CardViewActionImage"
                    android:src="@drawable/ic_share_grey_600_24dp"
                    android:contentDescription="@string/cd_share"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
