<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        style="@style/MyCardView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:transitionName="@string/trans_cardview"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true">

        <!--Header section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/CardViewSection"
                android:layout_marginBottom="@dimen/default_padding_medium"
                android:layout_marginTop="@dimen/default_padding_medium"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_favicon"
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/cd_favicon"
                    android:src="@drawable/ic_bookmark_grey_500_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_padding_large"
                    android:layout_marginStart="@dimen/default_padding_large"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/text_medium"/>

                    <TextView
                        android:id="@+id/textview_domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/text_small"/>

                </LinearLayout>

            </LinearLayout>

            <!--Detail section-->
            <LinearLayout
                android:id="@+id/linearlayout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/CardViewSection"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textview_num_saved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/text_small"
                        android:layout_marginBottom="@dimen/default_padding_medium"
                        android:textStyle="italic"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cardview_full_url"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textview_full_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_padding_medium"
                        android:textSize="@dimen/text_small"/>

                </LinearLayout>

                <LinearLayout style="@style/CardViewSeparator"/>

                <!--Footer section-->
                <LinearLayout
                    style="@style/CardViewSection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding_medium"
                    android:layout_marginRight="@dimen/default_padding_medium"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageview_share"
                        style="@style/CardViewActionImage"
                        android:src="@drawable/ic_share_grey_600_24dp"
                        android:contentDescription="@string/cd_share"/>

                    <ImageView
                        android:id="@+id/imageview_save"
                        style="@style/CardViewActionImage"
                        android:src="@drawable/ic_bookmark_grey_600_24dp"
                        android:contentDescription="@string/cd_save"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_score"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/card_view1"
        android:layout_alignRight="@+id/card_view1"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:animateLayoutChanges="true"
        android:elevation="6dp"
        android:foreground="?selectableItemBackground"
        card_view:cardBackgroundColor="@color/accent"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/textview_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.CardView>

</RelativeLayout>
